RP-961 Address post release candidate cut SonarQube issues